# pmi-223-1-Yaroslav-Starostin-yistarostin

./: .clang-format  LECTURES.md  README.md
contrib/catch/: catch.hpp
deadlines/: ead.yml  pmi.yml
tasks/admission/: admission.cpp
tasks/associative_operation/: associative_operation.cpp
tasks/cow/: cow_string.cpp  cow_string.h
tasks/image_processor/: CMakeLists.txt  bmp_chunks.h  controller.cpp  controller.h  image.h  image_processor.cpp  io.cpp  io.h  parser.cpp  parser.h
tasks/image_processor/.src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  image.h  image_processor  image_processor.cpp  io.cpp  parser.cpp  parser.h
tasks/image_processor/.src/filters/: crop.h  edge_detection.h  filter.h  gaussian_blur.h
tasks/image_processor/filters/: crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  filter.cpp  filter.h  gaussian_blur.cpp  gaussian_blur.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  saturate.cpp  saturate.h  sharpening.h  ultralize.h
tasks/image_processor/src/: bmp_chunks.h  controller.cpp  image.h  image_processor.cpp  io.cpp  io.h  parser.cpp  pixel.h
tasks/image_processor/src/filters/: .clang-format  crop.h  edge_detection.h  filter.h  gaussian_blur.h  grayscale.h  negative.h  sharpening.h
tasks/mines/: minesweeper.cpp  minesweeper.h
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp
tasks/poly/: poly.cpp  poly.h
tasks/robot/: checkers_topology.cpp  checkers_topology.h  field.h  knight_topology.cpp  knight_topology.h  overflow_topology.cpp  overflow_topology.h  planar_topology.cpp  planar_topology.h  point.h  robot.cpp  robot.h  test.cpp  topology.cpp  topology.h  world.cpp  world.h
tasks/scorer/: scorer.cpp
tasks/scorer2/: scorer.cpp  scorer.h
tasks/search/: search.cpp
tasks/search2/: search.cpp  search.h
tasks/sort_students/: sort_students.cpp
tasks/tests_checking/: tests_checking.cpp
tasks/unixpath/: unixpath.cpp
tasks/unixpath2/: unixpath.cpp  unixpath.h
tasks/word2vec/: word2vec.cpp
tasks/zip2/: zip.h
